# placomosaique

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/capsules_solver/: capsules_solver_app.cpp
apps/hungarian_method/: CMakeLists.txt  hungarian_method_app.cpp
apps/loading_capsules/: CMakeLists.txt  loading_capsules_app.cpp
inc/: array_to_html.h  capsule_extraction_pattern.h  capsule_extractor.h  capsules_solver.h  circle_grid.h  circle_grid_pattern.h  gale_shapley_algorithm.h  gale_shapley_utils.h  hungarian_logger.h  hungarian_method.h  palette_kmeans.h
inc/gale_shapley/: gale_shapley_algorithm.h  gale_shapley_man.h  gale_shapley_woman.h
src/: CMakeLists.txt  capsule_extraction_pattern.cpp  capsule_extractor.cpp  capsules_solver.cpp  circle_grid.cpp  circle_grid_pattern.cpp  gale_shapley_algorithm.cpp  gale_shapley_man.cpp  gale_shapley_utils.cpp  gale_shapley_woman.cpp  hungarian_logger.cpp  hungarian_method.cpp  main.cpp
